--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         <div class="menu-logo">
           <a href="#">FlexBlog</a>
         </div>
+        <nav class="menu-nav">
+          <ul>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#produtos">Produtos</a></li>
+            <li><a href="#preco">Preço</a></li>
+            <li><a href="#qualidade">qualidade</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav>
-        <ul>
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#produtos">Produtos</a></li>
-          <li><a href="#preco">Preço</a></li>
-          <li><a href="#qualidade">qualidade</a></li>
-        </ul>
-      </nav>
     </header>
     <h1 class="introducao">Novos valores e<br />Propriedades do CSS</h1>
 
