--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
 
       <div class="preco-item">
-        <h2>Gold</h2>
+        <h2>Ouro</h2>
         <span><sup>RS</sup> 79.00</span>
         <ul>
           <li>Planos Ilimitados</li>
